--- a/src/app/page/info/info.component.html
+++ b/src/app/page/info/info.component.html
@@ -1,1 +1,51 @@
-<p>info works!</p>
+<div class="min-h-screen bg-gray-100 py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-3xl mx-auto">
+    <h1 class="text-3xl font-bold text-center text-gray-900 mb-8">
+      Frequently Asked Questions
+    </h1>
+    <div class="space-y-4">
+      @for (faq of faqs; track faq; let i = $index) {
+        <div class="bg-white rounded-lg shadow-md overflow-hidden">
+          <button
+            class="w-full text-left p-4 focus:outline-none"
+            (click)="toggleQuestion(i)"
+          >
+            <div class="flex justify-between items-center">
+              <h2 class="text-lg font-semibold text-gray-900">
+                {{ faq.question }}
+              </h2>
+              <span
+                class="material-symbols-outlined transition-all duration-150"
+                [class]="faq.isOpen ? 'rotate-180' : ''"
+              >
+                keyboard_arrow_up
+              </span>
+            </div>
+          </button>
+
+          <div
+            class="px-4 pb-4 transition-all duration-150"
+            [class]="faq.isOpen ? 'block' : 'hidden'"
+          >
+            @if (faq.isChecklist) {
+              <ul class="list-none space-y-2">
+                @for (item of faq.answer; track item) {
+                  <li class="flex items-start">
+                    <span class="material-symbols-outlined pr-2 text-green-500">
+                      task_alt
+                    </span>
+                    <span class="text-gray-700" [innerHTML]="item"></span>
+                  </li>
+                }
+              </ul>
+            } @else {
+              <p class="text-gray-700">
+                {{ faq.answer }}
+              </p>
+            }
+          </div>
+        </div>
+      }
+    </div>
+  </div>
+</div>
