--- a/src/app/page/summary/summary.component.html
+++ b/src/app/page/summary/summary.component.html
@@ -29,6 +29,7 @@
         <hr class="my-1 border-gray-200" />
         <button
           class="w-full block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+          [routerLink]="['/config']"
         >
           Change default provider
         </button>
