--- a/src/app/page/summary/summary.component.html
+++ b/src/app/page/summary/summary.component.html
@@ -1,9 +1,10 @@
 <div class="relative flex mb-4" x-data="{dropdownOpen: false}">
   <button
     class="bg-black flex-grow hover:bg-gray-800 text-white font-semibold py-2 px-4 rounded-l focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-opacity-50"
-    (click)="summaryGenerate(configSvc.getAll().defaultProvider)"
+    (click)="summaryGenerate(configSvc.getAll().defaultSummaryProvider)"
   >
-    Generate with {{ configSvc.getAll().defaultProvider.toLocaleUpperCase() }}
+    Generate with
+    {{ configSvc.getAll().defaultSummaryProvider.toLocaleUpperCase() }}
   </button>
   <button
     class="bg-black hover:bg-gray-800 text-white font-semibold py-2 px-2 rounded-r border-l border-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-opacity-50"
